Tentativa de correção de audio

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <title>Nyan cat kk</title>
+    <title>Nyan cat</title>
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
-        <audio autoplay loop src="./audios/Nyan_Cat.mp3"></audio>
+        <audio autoplay loop src="/audios/Nyan_Cat.mp3"></audio>
         <link rel="Keven" href="">
-        <p>Criado por Keven</p>
+        <p></p>
     </body>
 
 </html>
